[package]
name = "ant-d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.25"
prost = "0.11.2"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.11"
tonic = "0.8.2"
rusb = "0.9.1"
clap = { version = "4.0.29", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.4"
